# dissertation

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  data_loader.py
src/thesis/: config.py  constants.py  data_loader.py  mimic4_ehr.yaml
src/thesis/data/: EDASource.py  eda_source.py  icu_extract.py  normalize.py  sources.py
src/thesis/eda/: cache.py  dashboard.py  filters.py
src/thesis/feature_engineering/: diagnoses_cache.py  diagnostic_criteria.py  driver.py  run_validation.py  urine_output.py  validation.py
tests/data/: conftest.py  test_cast_frame.py  test_cleanse_float_values.py  test_mimic4_add_descriptions_to_icd_codes.py  test_polars_eda_source.py  test_replace_mimic4_non_icd_codes.py  test_sources.py
tests/feature_engineering/: conftest.py  test_calculate_urine_output_rate.py  test_combine_weight_and_urine.py  test_diagnoses_cache.py  test_diagnostic_criteria.py  test_net_urine.py  test_normalize_weights.py  test_validation.py
