[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pyhealth>=2.0.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
