[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "plotly>=6.9.0",
    "polars>=1.35.2",
    "pre-commit>=4.6.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.14.2",
    "pyhealth>=2.0.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
    "pytest>=9.1.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
"**/dashboard.py" = ["E402"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
